<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/o_aplikaciji_header"
            android:textSize="32dp"
            android:textColor="@color/plava_primary_dark"
            android:id="@+id/aboutHeader"
            tools:ignore="MissingConstraints" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/aboutHeader"
            android:layout_marginTop="24dp"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/about"
                android:textSize="20sp"
                android:textColor="@color/plava_secondary"/>

            </ScrollView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/scroll">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radili"
                android:layout_marginTop="16dp"
                tools:ignore="MissingConstraints"
                android:textSize="20sp"
                android:textColor="@color/plava_secondary"/>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>